--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,23 @@
-MONGO_URI=mongodb://127.0.0.1:27017/event_mgmt
-JWT_SECRET=dev_secret_change_me
-JWT_EXPIRES_IN=7d
+# Server
 PORT=5050
+
+# MongoDB
+MONGO_URI=mongodb://127.0.0.1:27017/event_mgmt
+# or (if you prefer the image version name)
+# MONGODB_URI=mongodb://localhost:27017/eventmanager
+
+# JWT
+JWT_SECRET=supersecret
+JWT_EXPIRES_IN=7d
+
+# Client URL
 CLIENT_URL=http://localhost:5173
+# or (if your backend expects this key)
+# CLIENT_ORIGIN=http://localhost:5173
+
+# SMTP (Email)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=
-SMTP_PASS=
-EMAIL_FROM=CampusEvents <no-reply@campus.local>
+SMTP_USER=youremail@gmail.com
+SMTP_PASS=your_app_password
+EMAIL_FROM="CampusEvents <no-reply@campus.local>"
